[tool.poetry]
name = "chutes-telegram-bot"
version = "1.0.0"
description = "Chutes AI Telegram Bot"
authors = ["gazinur027"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.0"
aiohttp = "^3.10.0"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
